--- a/research/index.html
+++ b/research/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html class="theme-next mist use-motion" lang="zh-Hans">
 <head>
   <!-- hexo-inject:begin --><!-- hexo-inject:end --><meta charset="UTF-8"/>
