Update index.html fix

--- a/research/index.html
+++ b/research/index.html
@@ -221,7 +221,7 @@ body {
                 <a href="https://github.com/yangsenius" target="_blank" title="GitHub">
                     <img src="https://cdn-icons-png.flaticon.com/512/733/733553.png" alt="GitHub">
                 </a>
-                <a href="senyang-ml.github.io" target="_blank" title="Blog">
+                <a href="https://senyang-ml.github.io" target="_blank" title="Blog">
                   <img src="https://cdn-icons-png.flaticon.com/512/1006/1006771.png" alt="Blog">
               </a>
               </div>
