--- a/research/index.html
+++ b/research/index.html
@@ -208,22 +208,34 @@ body {
             <img src="https://scholar.googleusercontent.com/citations?view_op=medium_photo&user=z5O3DLcAAAAJ&citpid=5" alt="Sen Yang" class="profile-image">
             <div class="profile-content">
               <h2 id="biography">Sen Yang (杨森)</h2>
-              <p>I am currently working at Baidu. Before that I obtained Ph.D. degree from Southeast University in 2023. 
-                My research interests includes computer vision and deep learning, particularly focusing on 2D/3D human pose estimation, autonomous driving and multimodal models. 
-                I am dedicated to developing cutting-edge solutions for real-world computer vision applications.</p>
+              <p>I am a Research & Engineer at Baidu, where I work on computer vision, autonomous driving and multimodal LLM. I received my Ph.D. from Southeast University in 2023. My research focuses on computer vision and deep learning, 
+                with particular interests in 2D/3D human pose estimation, autonomous driving perception, and multimodal foundation models for vision. 
+                I am passionate about developing innovative solutions that bridge cutting-edge research with real-world applications.</p>
               <div class="social-icons">
-                <a href="mailto:yangsenius@seu.edu.cn" title="Email">
-                    <img src="https://cdn-icons-png.flaticon.com/512/561/561188.png" alt="Email">
-                </a>
-                <a href="https://scholar.google.com/citations?user=z5O3DLcAAAAJ" target="_blank" title="Google Scholar">
-                  <img src="https://cdn-icons-png.flaticon.com/512/2784/2784504.png" alt="Google Scholar">
-                </a>
-                <a href="https://github.com/yangsenius" target="_blank" title="GitHub">
-                    <img src="https://cdn-icons-png.flaticon.com/512/733/733553.png" alt="GitHub">
-                </a>
-                <a href="https://senyang-ml.github.io" target="_blank" title="Blog">
-                  <img src="https://cdn-icons-png.flaticon.com/512/1006/1006771.png" alt="Blog">
-              </a>
+                <div class="icon-container">
+                  <a href="mailto:yangsenius@gmail.com" title="Email">
+                      <img src="https://cdn-icons-png.flaticon.com/512/561/561188.png" alt="Email">
+                      <span>Email</span>
+                  </a>
+                </div>
+                <div class="icon-container">
+                  <a href="https://scholar.google.com/citations?user=z5O3DLcAAAAJ" target="_blank" title="Google Scholar">
+                    <img src="https://cdn-icons-png.flaticon.com/512/2784/2784504.png" alt="Google Scholar">
+                    <span>Scholar</span>
+                  </a>
+                </div>
+                <div class="icon-container">
+                  <a href="https://github.com/yangsenius" target="_blank" title="GitHub">
+                      <img src="https://cdn-icons-png.flaticon.com/512/733/733553.png" alt="GitHub">
+                      <span>GitHub</span>
+                  </a>
+                </div>
+                <div class="icon-container">
+                  <a href="https://senyang-ml.github.io" target="_blank" title="Blog">
+                    <img src="https://cdn-icons-png.flaticon.com/512/1006/1006771.png" alt="Blog">
+                    <span>Blog</span>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -247,7 +259,7 @@ body {
   </ul>
 </div>
 <div class="section">
-  <h2 id="publications">Publications</h2>
+  <h2 id="publications">Selected Publications</h2>
   <div class="publications">
     <div class="publication-item">
       <p><strong>TopoSD: Topology-Enhanced Lane Segment Perception with SDMap Prior</strong><br>
@@ -256,39 +268,46 @@ body {
     </div>
 
     <div class="publication-item">
+      <p><strong>MGMapNet: Multi-Granularity Representation Learning for End-to-End Vectorized HD Map Construction</strong><br>
+        Jing Yang*, Minyue Jiang*, <strong>>Sen Yang</strong>*, Xiao Tan, Yingying Li, Errui Ding, Hanli Wang, Jingdong Wang.  <strong>ICLR 2025</strong><br>
+        <a href="https://arxiv.org/pdf/2410.07733.pdf">[PDF]</a></p>
+    </div>
+  </div>
+
+    <div class="publication-item">
       <p><strong>Detecting and grouping keypoints for multi-person pose estimation using instance-aware attention</strong><br>
-      <strong>Sen Yang</strong>, Ze Feng, Zhicheng Wang, Yanjie Li, Shoukui Zhang, Zhibin Quan, Shu-tao Xia, Wankou Yang. Pattern Recognition<br>
+      <strong>Sen Yang</strong>, Ze Feng, Zhicheng Wang, Yanjie Li, Shoukui Zhang, Zhibin Quan, Shu-tao Xia, Wankou Yang. <strong>Pattern Recognition</strong><br>
       <a href="https://www.sciencedirect.com/science/article/abs/pii/S0031320322007117">[Journal Paper]</a> 
     </p>
     </div>
 
     <div class="publication-item">
       <p><strong>Capturing the motion of every joint: 3D human pose and mesh recovery with independent tokens</strong><br>
-        <strong>Sen Yang</strong>, Wen Heng, Gang Liu, Guozhong Luo, Wankou Yang, Gang Yu. ICLR 2023 (spotlight, top 25%)<br>
+        <strong>Sen Yang</strong>, Wen Heng, Gang Liu, Guozhong Luo, Wankou Yang, Gang Yu. <strong>ICLR 2023 (spotlight, top 25%)</strong><br>
         <a href="https://arxiv.org/abs/2303.00298">[Paper]</a> <a href="https://github.com/yangsenius/INT_HMR_Model">[Code]</a> <a href="https://yangsenius.github.io/INT_HMR_Model/">[Project]</a></p>
     </div>
 
     <div class="publication-item">
       <p><strong>Searching part-specific neural fabrics for human pose estimation</strong><br>
-        <strong>Sen Yang</strong>, Wankou Yang, Zhen Cui. Pattern Recognition. <br>
+        <strong>Sen Yang</strong>, Wankou Yang, Zhen Cui. <strong>Pattern Recognition</strong>. <br>
       <a href="https://www.sciencedirect.com/science/article/abs/pii/S0031320322001339">[Journal Paper]</a> <a href="https://github.com/yangsenius/ssa_pose">[Code]</a></p>
     </div>
 
     <div class="publication-item">
       <p><strong>SimCC: A Simple Coordinate Classification perspective for human pose estimation</strong><br>
-        Yanjie Li, <strong>Sen Yang</strong>, Peidong Liu, Shoukui Zhang, Yunxiao Wang, Zhicheng Wang, Wankou Yang, Shu-Tao Xia. ECCV 2022 (oral, top 5%). <br>
+        Yanjie Li, <strong>Sen Yang</strong>, Peidong Liu, Shoukui Zhang, Yunxiao Wang, Zhicheng Wang, Wankou Yang, Shu-Tao Xia. <strong>ECCV 2022 (oral, top 5%)</strong>. <br>
       <a href="https://arxiv.org/abs/2107.03332">[Paper]</a> <a href="https://github.com/leeyegy/SimDR">[Code]</a> <a href="https://zhuanlan.zhihu.com/p/664996998">[Zhihu]</a></p>
     </div>
 
     <div class="publication-item">
       <p><strong>TokenPose: Learning Keypoint Tokens for Human Pose Estimation</strong><br>
-        Yanjie Li, Shoukui Zhang, Zhicheng Wang, <strong>Sen Yang</strong>, Wankou Yang, Shu-Tao Xia, Erjin Zhou. ICCV 2021. <br>
+        Yanjie Li, Shoukui Zhang, Zhicheng Wang, <strong>Sen Yang</strong>, Wankou Yang, Shu-Tao Xia, Erjin Zhou. <strong>ICCV 2021</strong>. <br>
       <a href="https://arxiv.org/abs/2104.03516">[Paper]</a> <a href="https://github.com/leeyegy/TokenPose">[Code]</a></p>
     </div>
 
     <div class="publication-item">
       <p><strong>TransPose: Keypoint Localization via Transformer</strong><br>
-        <strong>Sen Yang</strong>, Zhibin Quan, Mu Nie, Wankou Yang. ICCV 2021. <br>
+        <strong>Sen Yang</strong>, Zhibin Quan, Mu Nie, Wankou Yang. <strong>ICCV 2021</strong>. <br>
       <a href="https://arxiv.org/abs/2012.14214">[Paper]</a> <a href="https://github.com/yangsenius/TransPose">[Code]</a></p>
     </div>
   </div>
