--- a/research/index.html
+++ b/research/index.html
@@ -402,7 +402,7 @@ gantt
     </section>
 
     <!-- 专业技能部分 -->
-    <!-- <section id="skills" class="skills">
+    <section id="skills" class="skills">
         <div class="container">
             <h2 class="section-title">专业技能</h2>
             <div class="skills-content">
@@ -415,7 +415,7 @@ gantt
                 </ul>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <section id="contact" class="contact">
         <div class="container">
