--- a/research/index_en.html
+++ b/research/index_en.html
@@ -91,7 +91,7 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="language-switch">
-                <span class="active">EN</span> | <a href="personal_website.html">中文</a>
+                <span class="active">EN</span> | <a href="index.html">中文</a>
             </div>
         </nav>
     </header>
