--- a/research/index_en.html
+++ b/research/index_en.html
@@ -11,8 +11,9 @@
         .markmap {
             width: 100%;
             max-width: 900px;
-            min-height: 350px; /* Adjusted for more flexibility */
-            height: 800px; /* Set a fixed height for Markmap container */
+            min-height: 400px; /* Adjusted for more flexibility */
+            height: auto; /* Auto height based on content */
+            max-height: 650px; /* Maximum height */
             margin: 0 auto;
             border-radius: 8px;
             overflow: hidden;
