--- a/research/index_profile.html
+++ b/research/index_profile.html
@@ -11,8 +11,9 @@
         .markmap {
             width: 100%;
             max-width: 100%;
-            min-height: 500px;
-            height: 600px;
+            min-height: 400px;
+            height: auto;
+            max-height: 550px;
             margin: 0;
             border-radius: 6px;
             overflow: hidden;
