Revert mindmap to inline HTML, remove from data.js
- Remove mindmap.content from data.js (keep only title and tip)
- Restore original renderMindmap() in renderer.js
- Hardcode Chinese mindmap content in index.html
- Hardcode English mindmap content in index_en.html
- Hardcode bilingual content in index_profile.html
- Remove auto-redirect to English from index.html

This reverts the dynamic loading approach and uses inline content
for better compatibility and simpler maintenance.

--- a/research/index.html
+++ b/research/index.html
@@ -4,13 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sen Yang | 杨森 - Personal Website</title>
-    <!-- 默认跳转到英文版 -->
-    <script>
-        // 检查是否已经手动选择过语言
-        if (!localStorage.getItem('preferredLanguage')) {
-            window.location.href = 'index_en.html';
-        }
-    </script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous">
     <style>
@@ -149,7 +142,35 @@
                     </button>
                 </div>
                 <div class="markmap">
-                    <pre class="markmap-content"></pre>
+                    <pre class="markmap-content"># **杨森个人主页**
+## 关于我
+- **视觉与多模态AI研究者**
+- 研究方向：
+  - 多模态大模型研究与应用
+  - 自动驾驶
+  - 人体姿态估计
+  - 模型架构优化
+## 教育背景
+- **博士**：东南大学 (2019.5-2023.3)
+- 硕士：东南大学 (2017.9-2019.1)
+- 学士：吉林大学 (2013.9-2017.7)
+## 工作经历
+- **百度 VIS 高级研发工程师** (2023.7-至今)
+- 腾讯 PCG 实习生 (2021.12-2022.8)
+- 旷视科技 实习生 (2021.1-2021.10)
+## 技术栈与研究
+- 自动驾驶感知与决策
+  - **VLM、融合&跟踪建图、拓扑预测、概率规划**
+  - 相关工作：TopoSD, MGMapNet, HisTrackMap
+- 多模态大模型
+  - **视觉定位、多模蒸馏、视频理解、COT、RL**
+  - 相关工作：EM-KD, Vision Remember, MomentSeg
+- 人体姿态估计
+  - **2D/3D姿态、Transformer模型、SMPL模型**
+  - 相关工作：TransPose, TokenPose, SimCC
+## 联系方式
+- Email: yangsenius@gmail.com
+- Blog: senyang-ml.github.io</pre>
                 </div>
                 <div class="markmap-tip" style="text-align: center; padding: 8px; color: #888; font-size: 12px;"></div>
             </div>
