--- a/research/index_profile.html
+++ b/research/index_profile.html
@@ -142,7 +142,35 @@
                     </button>
                 </div>
                 <div class="markmap">
-                    <pre class="markmap-content"></pre>
+                    <pre class="markmap-content"># **Sen Yang's Personal Website / 杨森个人主页**
+## About Me / 关于我
+- **CV & Multimodal AI Researcher / 视觉与多模态AI研究者**
+- Focus on:
+  - Multimodal LLM research and applications
+  - Autonomous Driving 
+  - Human Pose Estimation
+  - Model architecture optimization
+## Education / 教育背景
+- **Ph.D. / 博士**：Southeast University / 东南大学 (2019.5-2023.3)
+- Master / 硕士：Southeast University / 东南大学 (2017.9-2019.1)
+- Bachelor / 学士：Jilin University / 吉林大学 (2013.9-2017.7)
+## Work Experience / 工作经历
+- **Baidu VIS Senior R&D Engineer / 百度 VIS 高级研发工程师** (2023.7-Present / 至今)
+- Tencent PCG Intern / 腾讯 PCG 实习生 (2021.12-2022.8)
+- Megvii Intern / 旷视科技 实习生 (2021.1-2021.10)
+## Technology Stack & Research / 技术栈与研究
+- 自动驾驶感知与决策 / AD Perception & Planning
+  - **VLM、融合&跟踪建图、拓扑预测、概率规划**
+  - 相关工作：TopoSD, MGMapNet, HisTrackMap
+- 多模态大模型 / Multimodal Foundation Models
+  - **视觉定位、多模蒸馏、视频理解、COT、RL**
+  - 相关工作：EM-KD, Vision Remember, MomentSeg
+- 人体姿态估计 / Human Pose Estimation
+  - **2D/3D姿态、Transformer模型、SMPL模型**
+  - 相关工作：TransPose, TokenPose, SimCC
+## Contact / 联系方式
+- Email: yangsenius@gmail.com
+- Blog: senyang-ml.github.io</pre>
                 </div>
                 <div class="markmap-tip" style="text-align: center; padding: 8px; color: #888; font-size: 12px;"></div>
             </div>
