--- a/research/index_en.html
+++ b/research/index_en.html
@@ -145,7 +145,35 @@
                     </button>
                 </div>
                 <div class="markmap">
-                    <pre class="markmap-content"></pre>
+                    <pre class="markmap-content"># **Sen Yang's Personal Website**
+## About Me
+- **CV & Multimodal AI Researcher**
+- Focus on:
+  - Multimodal LLM research and applications
+  - Autonomous Driving
+  - Human Pose Estimation
+  - Model architecture optimization
+## Education
+- **Ph.D.**: Southeast University (2019.5-2023.3)
+- Master: Southeast University (2017.9-2019.1)
+- Bachelor: Jilin University (2013.9-2017.7)
+## Work Experience
+- **Baidu VIS Senior R&D Engineer** (2023.7-Present)
+- Tencent PCG Intern (2021.12-2022.8)
+- Megvii Intern (2021.1-2021.10)
+## Technology Stack & Research
+- AD Perception & Planning
+  - **VLM, Fusion & Tracking Mapping, Topology Prediction, Probabilistic Planning**
+  - Work: TopoSD, MGMapNet, HisTrackMap
+- Multimodal Foundation Models
+  - **Visual Grounding, Multimodal Distillation, Video Understanding, COT, RL**
+  - Work: EM-KD, Vision Remember, MomentSeg
+- Human Pose Estimation
+  - **2D/3D Pose, Transformer Models, SMPL Model**
+  - Work: TransPose, TokenPose, SimCC
+## Contact
+- Email: yangsenius@gmail.com
+- Blog: senyang-ml.github.io</pre>
                 </div>
                 <div class="markmap-tip" style="text-align: center; padding: 10px; color: #666; font-size: 14px;"></div>
             </div>
