Restore original English mindmap content in index_en.html
- Revert to original structure: About Me, Education, Work Experience,
  Research Publications, Technical Skills, Contact Information
- Fix section title to hardcoded 'TL;DR (Overview)'

--- a/research/index_en.html
+++ b/research/index_en.html
@@ -137,7 +137,7 @@
     <!-- Mindmap Section -->
     <section id="mindmap" class="mindmap">
         <div class="container">
-            <h2 class="section-title"></h2>
+            <h2 class="section-title">TL;DR (Overview)</h2>
             <div class="markmap-container">
                 <div class="markmap-controls">
                     <button id="reset-view-btn" class="control-button" title="Refresh">
@@ -147,33 +147,48 @@
                 <div class="markmap">
                     <pre class="markmap-content"># **Sen Yang's Personal Website**
 ## About Me
-- **CV & Multimodal AI Researcher**
-- Focus on:
-  - Multimodal LLM research and applications
+- **Computer Vision Researcher**
+- Research Interests:
+  - Computer Vision
+  - Multimodal Large Language Models
   - Autonomous Driving
-  - Human Pose Estimation
-  - Model architecture optimization
 ## Education
 - **Ph.D.**: Southeast University (2019.5-2023.3)
 - Master: Southeast University (2017.9-2019.1)
 - Bachelor: Jilin University (2013.9-2017.7)
 ## Work Experience
 - **Baidu VIS Senior R&D Engineer** (2023.7-Present)
-- Tencent PCG Intern (2021.12-2022.8)
+- Tencent TPG Intern (2021.12-2022.8)
 - Megvii Intern (2021.1-2021.10)
-## Technology Stack & Research
-- AD Perception & Planning
-  - **VLM, Fusion & Tracking Mapping, Topology Prediction, Probabilistic Planning**
-  - Work: TopoSD, MGMapNet, HisTrackMap
-- Multimodal Foundation Models
-  - **Visual Grounding, Multimodal Distillation, Video Understanding, COT, RL**
-  - Work: EM-KD, Vision Remember, MomentSeg
-- Human Pose Estimation
-  - **2D/3D Pose, Transformer Models, SMPL Model**
-  - Work: TransPose, TokenPose, SimCC
-## Contact
+## Research Publications
+- **Autonomous Driving**
+  - TopoSD: Topology-Enhanced Lane Segment Perception
+  - MGMapNet: Multi-Granularity Representation Learning
+- **Multimodal Large Models**
+  - Vision Remember: Alleviating Visual Forgetting in Efficient MLLM
+- **Pose Estimation**
+  - Detecting and grouping keypoints
+  - Capturing the motion of every joint
+  - Searching part-specific neural fabrics
+  - SimCC: A Simple Coordinate Classification
+  - TokenPose: Learning Keypoint Tokens
+  - TransPose: Keypoint Localization via Transformer
+## Technical Skills
+- **Multimodal Large Models**
+  - MLLM Architectures: LLaVA, Qwen2.5-VL, LISA
+  - Training Techniques: SFT, Autoregressive Models, RL
+  - Visual Token Compression, Large-scale Distributed Training
+- **Autonomous Driving Perception**
+  - BEV Visual Mapping, Temporal Modeling
+  - Multimodal Fusion: Vision + Map Structured Data
+  - Navigation Map Integration, Probabilistic Planning
+- **Deep Learning Frameworks**
+  - PyTorch, Python, C++
+  - Transformer Models, GPU/Ascend NPU Development
+## Contact Information
 - Email: yangsenius@gmail.com
-- Blog: senyang-ml.github.io</pre>
+- Blog: senyang-ml.github.io
+- Google Scholar Profile</pre>
                 </div>
                 <div class="markmap-tip" style="text-align: center; padding: 10px; color: #666; font-size: 14px;"></div>
             </div>
