Add cache busting version to main.js
- Add ?v=2 query parameter to force browser to load latest main.js
- Prevents cached old version from being used

--- a/research/index.html
+++ b/research/index.html
@@ -256,7 +256,7 @@ gantt
     <script src="js/data.js"></script>
     <script src="js/data-loader.js"></script>
     <script src="js/renderer.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.js?v=2"></script>
     
     <!-- Markmap库 - 使用全局变量版本 -->
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
