--- a/research/index_en.html
+++ b/research/index_en.html
@@ -447,7 +447,7 @@ gantt
         </div>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="js/main.js?v=2"></script>
     <!-- Include markmap-autoloader -->
     <script src="https://cdn.jsdelivr.net/npm/markmap-autoloader"></script>
     <!-- Include Mermaid JS library -->
