--- a/research/index.html
+++ b/research/index.html
@@ -142,7 +142,8 @@
                     </button>
                 </div>
                 <div class="markmap">
-                    <pre class="markmap-content"># **杨森个人主页**
+                    <!-- 中文思维导图内容 -->
+                    <pre class="markmap-content" data-lang="zh"># **杨森个人主页**
 ## 关于我
 - **视觉与多模态AI研究者**
 - 研究方向：
@@ -171,6 +172,51 @@
 ## 联系方式
 - Email: yangsenius@gmail.com
 - Blog: senyang-ml.github.io</pre>
+                    <!-- 英文思维导图内容 -->
+                    <pre class="markmap-content" data-lang="en" style="display: none;"># **Sen Yang's Personal Website**
+## About Me
+- **Computer Vision Researcher**
+- Research Interests:
+  - Computer Vision
+  - Multimodal Large Language Models
+  - Autonomous Driving
+## Education
+- **Ph.D.**: Southeast University (2019.5-2023.3)
+- Master: Southeast University (2017.9-2019.1)
+- Bachelor: Jilin University (2013.9-2017.7)
+## Work Experience
+- **Baidu VIS Senior R&D Engineer** (2023.7-Present)
+- Tencent TPG Intern (2021.12-2022.8)
+- Megvii Intern (2021.1-2021.10)
+## Research Publications
+- **Autonomous Driving**
+  - TopoSD: Topology-Enhanced Lane Segment Perception
+  - MGMapNet: Multi-Granularity Representation Learning
+- **Multimodal Large Models**
+  - Vision Remember: Alleviating Visual Forgetting in Efficient MLLM
+- **Pose Estimation**
+  - Detecting and grouping keypoints
+  - Capturing the motion of every joint
+  - Searching part-specific neural fabrics
+  - SimCC: A Simple Coordinate Classification
+  - TokenPose: Learning Keypoint Tokens
+  - TransPose: Keypoint Localization via Transformer
+## Technical Skills
+- **Multimodal Large Models**
+  - MLLM Architectures: LLaVA, Qwen2.5-VL, LISA
+  - Training Techniques: SFT, Autoregressive Models, RL
+  - Visual Token Compression, Large-scale Distributed Training
+- **Autonomous Driving Perception**
+  - BEV Visual Mapping, Temporal Modeling
+  - Multimodal Fusion: Vision + Map Structured Data
+  - Navigation Map Integration, Probabilistic Planning
+- **Deep Learning Frameworks**
+  - PyTorch, Python, C++
+  - Transformer Models, GPU/Ascend NPU Development
+## Contact Information
+- Email: yangsenius@gmail.com
+- Blog: senyang-ml.github.io
+- Google Scholar Profile</pre>
                 </div>
                 <div class="markmap-tip" style="text-align: center; padding: 8px; color: #888; font-size: 12px;"></div>
             </div>
@@ -294,8 +340,8 @@ gantt
             console.log("Markmap container found.", markmapDiv);
             console.log("Markmap container dimensions (initial):", markmapDiv.offsetWidth, markmapDiv.offsetHeight);
 
-            // 获取 markdown 内容
-            const pre = markmapDiv.querySelector('pre');
+            // 获取 markdown 内容 - 获取当前可见的 pre 标签
+            const pre = markmapDiv.querySelector('pre:not([style*="display: none"])') || markmapDiv.querySelector('pre');
             const content = pre ? pre.textContent.trim() : markmapDiv.textContent.trim();
 
             // 如果内容为空，等待内容填充
