Keep only English mindmap, add vertical spacing
- Remove Chinese mindmap content from index.html
- Add extra line breaks in English mindmap content for better spacing
- Increase markmap margin from 0 to 30px for better vertical spacing
- Remove switchMindmapLanguage() method from main.js as only English is kept
- Update initMarkmap query to work with single pre element

--- a/research/index.html
+++ b/research/index.html
@@ -142,52 +142,26 @@
                     </button>
                 </div>
                 <div class="markmap">
-                    <!-- 中文思维导图内容 -->
-                    <pre class="markmap-content" data-lang="zh"># **杨森个人主页**
-## 关于我
-- **视觉与多模态AI研究者**
-- 研究方向：
-  - 多模态大模型研究与应用
-  - 自动驾驶
-  - 人体姿态估计
-  - 模型架构优化
-## 教育背景
-- **博士**：东南大学 (2019.5-2023.3)
-- 硕士：东南大学 (2017.9-2019.1)
-- 学士：吉林大学 (2013.9-2017.7)
-## 工作经历
-- **百度 VIS 高级研发工程师** (2023.7-至今)
-- 腾讯 PCG 实习生 (2021.12-2022.8)
-- 旷视科技 实习生 (2021.1-2021.10)
-## 技术栈与研究
-- 自动驾驶感知与决策
-  - **VLM、融合&跟踪建图、拓扑预测、概率规划**
-  - 相关工作：TopoSD, MGMapNet, HisTrackMap
-- 多模态大模型
-  - **视觉定位、多模蒸馏、视频理解、COT、RL**
-  - 相关工作：EM-KD, Vision Remember, MomentSeg
-- 人体姿态估计
-  - **2D/3D姿态、Transformer模型、SMPL模型**
-  - 相关工作：TransPose, TokenPose, SimCC
-## 联系方式
-- Email: yangsenius@gmail.com
-- Blog: senyang-ml.github.io</pre>
                     <!-- 英文思维导图内容 -->
-                    <pre class="markmap-content" data-lang="en" style="display: none;"># **Sen Yang's Personal Website**
+                    <pre class="markmap-content"># **Sen Yang's Personal Website**
+
 ## About Me
 - **Computer Vision Researcher**
 - Research Interests:
   - Computer Vision
   - Multimodal Large Language Models
   - Autonomous Driving
+
 ## Education
 - **Ph.D.**: Southeast University (2019.5-2023.3)
 - Master: Southeast University (2017.9-2019.1)
 - Bachelor: Jilin University (2013.9-2017.7)
+
 ## Work Experience
 - **Baidu VIS Senior R&D Engineer** (2023.7-Present)
 - Tencent TPG Intern (2021.12-2022.8)
 - Megvii Intern (2021.1-2021.10)
+
 ## Research Publications
 - **Autonomous Driving**
   - TopoSD: Topology-Enhanced Lane Segment Perception
@@ -201,6 +175,7 @@
   - SimCC: A Simple Coordinate Classification
   - TokenPose: Learning Keypoint Tokens
   - TransPose: Keypoint Localization via Transformer
+
 ## Technical Skills
 - **Multimodal Large Models**
   - MLLM Architectures: LLaVA, Qwen2.5-VL, LISA
@@ -213,6 +188,7 @@
 - **Deep Learning Frameworks**
   - PyTorch, Python, C++
   - Transformer Models, GPU/Ascend NPU Development
+
 ## Contact Information
 - Email: yangsenius@gmail.com
 - Blog: senyang-ml.github.io
