Update mindmap content and formatting
- Simplify Research Interests section format
- Add Human Pose Estimation to research interests
- Condense paper names in Research Publications section
- Reorganize Pose Estimation papers list
- Change 'Technical Skills' to 'Technical stack'
- Update MLLM and AD sections with more relevant details

--- a/research/index.html
+++ b/research/index.html
@@ -147,10 +147,10 @@
 
 ## About Me
 - **Computer Vision Researcher**
-- Research Interests:
-  - Computer Vision
+- Research Interests
   - Multimodal Large Language Models
   - Autonomous Driving
+  - Human Pose Estimation
 
 ## Education
 - **Ph.D.**: Southeast University (2019.5-2023.3)
@@ -164,27 +164,29 @@
 
 ## Research Publications
 - **Autonomous Driving**
-  - TopoSD: Topology-Enhanced Lane Segment Perception
-  - MGMapNet: Multi-Granularity Representation Learning
+  - TopoSD
+  - MGMapNet
+  - HisTrackMap
 - **Multimodal Large Models**
-  - Vision Remember: Alleviating Visual Forgetting in Efficient MLLM
+  - Vision Remember
+  - MomentSeg
+  - EM-KD
 - **Pose Estimation**
-  - Detecting and grouping keypoints
+  - TransPose
+  - SimCC
+  - TokenPose
   - Capturing the motion of every joint
-  - Searching part-specific neural fabrics
-  - SimCC: A Simple Coordinate Classification
-  - TokenPose: Learning Keypoint Tokens
-  - TransPose: Keypoint Localization via Transformer
+  - Detecting and grouping keypoints
 
-## Technical Skills
+## Technical stack
 - **Multimodal Large Models**
-  - MLLM Architectures: LLaVA, Qwen2.5-VL, LISA
+  - Tasks: multilingual understanding, video understanding, referseg, visual reasoning and action
   - Training Techniques: SFT, Autoregressive Models, RL
-  - Visual Token Compression, Large-scale Distributed Training
+  - Token Compression, Large-scale Distributed Training
 - **Autonomous Driving Perception**
   - BEV Visual Mapping, Temporal Modeling
   - Multimodal Fusion: Vision + Map Structured Data
-  - Navigation Map Integration, Probabilistic Planning
+  - Navigation Map Integration, Probabilistic Planning, Topology prediciton
 - **Deep Learning Frameworks**
   - PyTorch, Python, C++
   - Transformer Models, GPU/Ascend NPU Development
